# pandapower-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  environment.yml  pyproject.toml  technical-intro-public.md  technical-intro.md  tutorial.md
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/DISCUSSION_TEMPLATE/: q-and-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  labels.yml  publish-testpypi.yml  release.yml
docs/: README.md  architecture.md
docs/launch/: good-first-issues.md  launch-playbook.md  maintenance-cadence.md  release-checklist.md
docs/tech/: technical-intro-internal.md  technical-intro-public.md
docs/zh/: README.zh-CN.md
plans/2026-02-28-conda-network-ux/: 00_master_plan.md  01_agent_a_env_get_started.md  02_agent_b_network_catalog_tools.md  03_agent_c_cli_ux_prompt.md  90_shared_contracts.md  99_integration_checklist.md
scripts/: demo_flow.sh  generate_demo_gif.py
src/app/: config.py  main.py
src/pandapower_agent/: config.py
tests/: test_agent_loop.py  test_cli_admin_mode.py  test_cli_config_init.py  test_config_dotenv.py  test_element_crud.py  test_opf_state_estimation.py  test_plotting_tool.py  test_powerflow_modes.py  test_short_circuit.py  test_topology.py
tests/agent/: test_runtime.py
tests/cli/: test_admin_mode.py  test_config_dotenv.py  test_config_init.py  test_dispatch_map.py  test_network_commands.py  test_require_api_key.py
tests/power/: test_contingency.py  test_element_crud.py  test_metrics.py  test_network_catalog.py  test_opf_state_estimation.py  test_pandapower_output_suppression.py  test_plotting_tool.py  test_powerflow_modes.py  test_registry_integrity.py  test_scenario_undo.py  test_short_circuit.py  test_tool_network_discovery.py  test_topology.py
(+41 files in other folders)
