[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pandapower-agent"
version = "0.1.0"
description = "Natural-language CLI agent for pandapower analysis with tool calling"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "pandapower-agent contributors"}
]
keywords = ["pandapower", "power-system", "grid-analysis", "cli", "llm", "agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "openai>=1.40.0",
  "pandapower>=2.14.0",
  "pydantic>=2.7.0",
  "rich>=13.7.0",
  "tabulate>=0.9.0",
  "pandas>=2.0.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0"
]

[project.urls]
Homepage = "https://github.com/banw/pandapower-agent"
Repository = "https://github.com/banw/pandapower-agent"
Issues = "https://github.com/banw/pandapower-agent/issues"
Changelog = "https://github.com/banw/pandapower-agent/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.6.0",
  "pre-commit>=3.8.0",
  "build>=1.2.0",
  "twine>=5.1.0"
]

[project.scripts]
agent = "pandapower_agent.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
